--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "ecell-react",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://krishjan4234.github.io/ecell-react",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -17,9 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -38,9 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0",
-    "tailwindcss": "^3.4.17"
   }
 }
